Correction mobile style and assets for filters.

--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -32,6 +32,7 @@
 }
 
 .mobile-filters {
+    unset: all;
     display: flex;
     column-gap: 0.4rem;
     justify-content: center;
@@ -45,8 +46,8 @@
 }
 
 .search-img {
-    height: 100%;
-    aspect-ratio: 1 / 1;
+    height: 90%;
+    width: auto;
 }
 
 .expanded-filters {
@@ -56,6 +57,7 @@
 }
 
 .filter-item-container {
+    all: unset;
     display: flex;
     column-gap: 0.5rem;
     width: calc(100% - 3rem);
@@ -129,6 +131,7 @@
     border: 1px solid var(--color-white-soft-background);
     box-shadow: 0 0 0.8rem var(--color-black-lighter-shadow);
     border-radius: 50%;
+    overflow: hidden;
 }
 
 .current-filter-container img {
